update trees and boosting

--- a/8 - Decision Trees/Decision Trees.ipynb
+++ b/8 - Decision Trees/Decision Trees.ipynb
@@ -50,7 +50,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:33:57.781739Z",
+     "start_time": "2018-11-19T09:33:53.768773Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -174,7 +179,7 @@
     "The Gini index expresses somehow the same idea. It was introduced by Gini (a sociologist and statistician) in 1936 to describe inequalities of income or wealth within a population. For $K$ classes, it is written:\n",
     "$$\\sum_{k=1}^K p_k(1-p_k)$$\n",
     "\n",
-    "To get an intuition of why this is a measure of inequality, suppose training set $T=\\left\\{(x,y)\\right\\}$ with only two classes $\\{0;1\\}$. Suppose you pick an individuals $x$ at random in $T$ and then you pick a class $y$ at random in $T$ again. What is the probability that $y$ is not the label of $x$?\n",
+    "To get an intuition of why this is a measure of inequality, suppose a training set $T=\\left\\{(x,y)\\right\\}$ with only two classes $\\{0;1\\}$. Suppose you pick an individuals $x$ at random in $T$ and then you pick a class $y$ at random in $T$ again. What is the probability that $y$ is not the label of $x$?\n",
     "$$p(1-p) + (1-p)(1-(1-p))$$\n",
     "\n",
     "<img src=\"attachment:binary_gini.png\" width=\"400px\">"
@@ -199,7 +204,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:36:33.298318Z",
+     "start_time": "2018-11-19T09:36:31.830223Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
@@ -235,7 +245,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:36:36.239358Z",
+     "start_time": "2018-11-19T09:36:36.167834Z"
+    }
+   },
    "outputs": [],
    "source": [
     "iris_dt2 = tree.DecisionTreeClassifier(criterion = 'entropy', max_depth=2)\n",
@@ -253,7 +268,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:37:09.961033Z",
+     "start_time": "2018-11-19T09:37:09.746483Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -280,7 +300,7 @@
     "\n",
     "Xblue = X[y==-1]\n",
     "Xred = X[y==1]\n",
-    "plt.figure()\n",
+    "plt.figure(figsize=(7,7))\n",
     "plt.scatter(Xblue[:,0],Xblue[:,1],c='b')\n",
     "_=plt.scatter(Xred[:,0],Xred[:,1],c='r')"
    ]
@@ -288,7 +308,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:37:13.410880Z",
+     "start_time": "2018-11-19T09:37:13.034890Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Change max_depth parameter to 10\n",
@@ -312,17 +337,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:38:01.593515Z",
+     "start_time": "2018-11-19T09:38:01.349188Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "def plot_decision_boundary_tree(t, X, y):\n",
+    "def plot_decision_boundary_tree(t, X, y, fig_size=(7,7)):\n",
     "    plot_step = 0.02\n",
     "    x0_min, x0_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
     "    x1_min, x1_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
     "    xx0, xx1 = np.meshgrid(np.arange(x0_min, x0_max, plot_step), np.arange(x1_min, x1_max, plot_step))\n",
     "    yypred = t.predict(np.c_[xx0.ravel(),xx1.ravel()])\n",
     "    yypred = yypred.reshape(xx0.shape)\n",
-    "    plt.figure()\n",
+    "    plt.figure(figsize=fig_size)\n",
     "    plt.contourf(xx0, xx1, yypred, cmap=plt.cm.Paired)\n",
     "    y_pred = t.predict(X)\n",
     "    Xblue_good = X[np.equal(y,-1)*np.equal(y,y_pred)]\n",
@@ -351,32 +381,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:39:05.185305Z",
+     "start_time": "2018-11-19T09:39:04.188166Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# example 2\n",
+    "fig_size = (7,7)\n",
+    "\n",
+    "# example 1\n",
     "X,y = gen_data(1)\n",
     "dt1 = tree.DecisionTreeClassifier(criterion='entropy',max_depth=5)\n",
     "dt1.fit(X,y)\n",
-    "plot_decision_boundary_tree(dt1, X, y)\n",
+    "plot_decision_boundary_tree(dt1, X, y, fig_size)\n",
     "\n",
     "# example 2\n",
     "X,y = gen_data(3)\n",
     "dt1 = tree.DecisionTreeClassifier(criterion='entropy',max_depth=5)\n",
     "dt1.fit(X,y)\n",
-    "plot_decision_boundary_tree(dt1, X, y)\n",
+    "plot_decision_boundary_tree(dt1, X, y, fig_size)\n",
     "\n",
     "# example 3\n",
     "X,y = gen_data(5)\n",
     "dt1 = tree.DecisionTreeClassifier(criterion='entropy',max_depth=5)\n",
     "dt1.fit(X,y)\n",
-    "plot_decision_boundary_tree(dt1, X, y)\n",
+    "plot_decision_boundary_tree(dt1, X, y, fig_size)\n",
     "\n",
     "# example 4\n",
     "X,y = gen_data(9)\n",
     "dt1 = tree.DecisionTreeClassifier(criterion='entropy',max_depth=5)\n",
     "dt1.fit(X,y)\n",
-    "plot_decision_boundary_tree(dt1, X, y)"
+    "plot_decision_boundary_tree(dt1, X, y, fig_size)"
    ]
   },
   {
@@ -412,7 +449,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:39:32.938614Z",
+     "start_time": "2018-11-19T09:39:23.475581Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sys import path\n",
@@ -427,7 +469,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:39:42.187135Z",
+     "start_time": "2018-11-19T09:39:36.971193Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code1.py\n",
@@ -445,7 +492,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:39:47.780126Z",
+     "start_time": "2018-11-19T09:39:47.776004Z"
+    }
+   },
    "outputs": [],
    "source": [
     "depths = np.arange(10,31,2)\n",
@@ -457,7 +509,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:41:59.633054Z",
+     "start_time": "2018-11-19T09:39:57.395049Z"
+    }
+   },
    "outputs": [],
    "source": [
     "for di in range(depths.shape[0]):\n",
@@ -477,7 +534,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:44:21.509579Z",
+     "start_time": "2018-11-19T09:44:21.293468Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -486,7 +548,7 @@
     "\n",
     "X, Y = np.meshgrid(leaf_size,depths)\n",
     "\n",
-    "%matplotlib notebook\n",
+    "%matplotlib inline\n",
     "fig = plt.figure(figsize=(10,10))\n",
     "ax = fig.gca(projection='3d')\n",
     "surf = ax.plot_surface(X, Y, scores, cmap=cm.coolwarm,\n",
@@ -506,7 +568,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:44:50.382342Z",
+     "start_time": "2018-11-19T09:44:45.734851Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Xtrain, ytrain, Xtest, ytest = spam_data.split(2000, feat='wordcount')\n",
@@ -535,7 +602,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:45:13.934846Z",
+     "start_time": "2018-11-19T09:45:13.768665Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -559,7 +631,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:45:14.558668Z",
+     "start_time": "2018-11-19T09:45:14.551660Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.utils import shuffle\n",
@@ -574,7 +651,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:45:14.944697Z",
+     "start_time": "2018-11-19T09:45:14.921288Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(Xtrain.shape)\n",
@@ -612,6 +694,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "304px",
+    "left": "10px",
+    "top": "150px",
+    "width": "265px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
