--- a/9 - Boosting/Boosting.ipynb
+++ b/9 - Boosting/Boosting.ipynb
@@ -151,7 +151,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:49:44.131463Z",
+     "start_time": "2018-11-19T09:49:43.897339Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -177,6 +182,7 @@
     "\n",
     "Xblue = X[y==-1]\n",
     "Xred = X[y==1]\n",
+    "plt.figure(figsize=(7,7))\n",
     "plt.scatter(Xblue[:,0],Xblue[:,1],c='b',s=20)\n",
     "_=plt.scatter(Xred[:,0],Xred[:,1],c='r',s=20)"
    ]
@@ -191,7 +197,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:49:48.224643Z",
+     "start_time": "2018-11-19T09:49:48.105162Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
@@ -225,16 +236,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:50:25.897876Z",
+     "start_time": "2018-11-19T09:50:25.647950Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "def plot_decision_boundary(t, X, y):\n",
+    "def plot_decision_boundary(t, X, y, fig_size=(7,7)):\n",
     "    plot_step = 0.02\n",
     "    x0_min, x0_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
     "    x1_min, x1_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
     "    xx0, xx1 = np.meshgrid(np.arange(x0_min, x0_max, plot_step), np.arange(x1_min, x1_max, plot_step))\n",
     "    yypred = t.predict(np.c_[xx0.ravel(),xx1.ravel()])\n",
     "    yypred = yypred.reshape(xx0.shape)\n",
+    "    plt.figure(figsize=fig_size)\n",
     "    plt.contourf(xx0, xx1, yypred, cmap=plt.cm.Paired)\n",
     "    y_pred = t.predict(X)\n",
     "    Xblue_good = X[np.equal(y,-1)*np.equal(y,y_pred)]\n",
@@ -262,7 +279,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:51:04.181278Z",
+     "start_time": "2018-11-19T09:51:03.875418Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def forest_predict(f, weights, X):\n",
@@ -273,13 +295,14 @@
     "    pred = np.sum(votes,axis=1)\n",
     "    return np.sign(pred)\n",
     "\n",
-    "def plot_decision_boundary_forest(f, weights, X, y):\n",
+    "def plot_decision_boundary_forest(f, weights, X, y, fig_size=(7,7)):\n",
     "    plot_step = 0.02\n",
     "    x0_min, x0_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
     "    x1_min, x1_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
     "    xx0, xx1 = np.meshgrid(np.arange(x0_min, x0_max, plot_step), np.arange(x1_min, x1_max, plot_step))\n",
     "    yypred = forest_predict(f, weights, np.c_[xx0.ravel(),xx1.ravel()])\n",
     "    yypred = yypred.reshape(xx0.shape)\n",
+    "    plt.figure(figsize=fig_size)\n",
     "    plt.contourf(xx0, xx1, yypred, cmap=plt.cm.Paired)\n",
     "    y_pred = forest_predict(f, weights, X)\n",
     "    Xblue_good = X[np.equal(y,-1)*np.equal(y,y_pred)]\n",
@@ -312,54 +335,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:54:49.169193Z",
+     "start_time": "2018-11-19T09:54:45.703717Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code1.py\n",
     "### WRITE YOUR CODE HERE\n",
-    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n",
-    "\n",
-    "Nsteps = 100\n",
-    "forest = list()\n",
-    "sample_weights = np.ones(len(y))/len(y)\n",
-    "tree_weights = np.zeros(Nsteps)\n",
-    "single_tree_training_error = np.zeros(Nsteps)\n",
-    "overall_training_error = np.zeros(Nsteps)\n",
-    "generalization_error = np.zeros(Nsteps)\n",
-    "for i in range(Nsteps):\n",
-    "    # Train tree\n",
-    "    dt = tree.DecisionTreeClassifier(criterion='entropy',max_depth=3)\n",
-    "    dt.fit(X,y,sample_weight=sample_weights)\n",
-    "    # Compute error\n",
-    "    y_pred = dt.predict(X)\n",
-    "    classif_error = sum(np.not_equal(y_pred, y)*sample_weights) / sum(sample_weights)\n",
-    "    forest.append(dt)\n",
-    "    # Get tree weight\n",
-    "    alpha = .5*np.log((1-classif_error)/classif_error)\n",
-    "    tree_weights[i] = alpha\n",
-    "    # Update weights\n",
-    "    sample_weights = sample_weights*np.exp(-alpha*y_pred*y)\n",
-    "    sample_weights = sample_weights/sum(sample_weights)\n",
-    "    # Plot and store data\n",
-    "    #plot_decision_boundary_forest(forest, sample_weights, X, y)\n",
-    "    single_tree_training_error[i] = classif_error\n",
-    "    y_pred = forest_predict(forest, tree_weights, X)\n",
-    "    overall = sum(np.not_equal(y_pred, y))/len(y)\n",
-    "    overall_training_error[i] = overall\n",
-    "    y_pred = forest_predict(forest, tree_weights, Xtest)\n",
-    "    gen = sum(np.not_equal(y_pred, ytest))/len(ytest)\n",
-    "    generalization_error[i] = gen\n",
-    "    #print(\"Nb trees %d. Last tree error %.3g. Training error %.3g. Generalization error %.3g. Press Enter\"\n",
-    "    #      %(len(forest),classif_error, overall, gen))\n",
-    "    #input()\n",
-    "\n",
-    "plt.figure(figsize=(8,8))\n",
-    "plt.plot(single_tree_training_error,c='b')\n",
-    "plt.plot(overall_training_error,c='r')\n",
-    "plt.plot(generalization_error,c='g')\n",
-    "plt.show()\n",
-    "plt.figure(figsize=(8,8))\n",
-    "plot_decision_boundary_forest(forest, sample_weights, X, y)\n"
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
    ]
   },
   {
@@ -383,7 +369,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T09:55:02.458380Z",
+     "start_time": "2018-11-19T09:54:56.347273Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import AdaBoostClassifier\n",
@@ -427,7 +418,7 @@
     "And similarly\n",
     "$$\\alpha_{k} = \\arg\\min_\\alpha \\left[ \\sum_{i} L(f_{k-1}(x_i) + \\alpha h_{k}(x_i),y) \\right]$$\n",
     "\n",
-    "Taking the gradient with respect to $f$ functions in $\\mathcal{H}$ is quite an abstract operation, so how do we choose the descent direction in practice? The key remark here is to notice that, for a given function $f$, although $f$ lives in a possibly infinite-dimensional function space, $f(x_i)$ lives in $\\mathbb{R}$ and is a descriptor of $f$ (around $x_i$). Thus, the function that would fit the training set $\\left(x_i, \\left[\\frac{\\partial L(f(x), y)}{\\partial f(x)}\\right]_{f = f_{k-1}}\\right)$ is an approximate descent direction.\n",
+    "Taking the gradient with respect to $f$ functions in $\\mathcal{H}$ is quite an abstract operation, so how do we choose the descent direction in practice? The key remark here is to notice that, for a given function $f$, although $f$ lives in a possibly infinite-dimensional function space, $f(x_i)$ lives in $\\mathbb{R}$ and is a descriptor of $f$ (around $x_i$). Thus, the function that would fit the training set $\\left\\{ \\left(x_i, \\left[\\frac{\\partial L(f(x_i), y_i)}{\\partial f(x_i)}\\right]_{f = f_{k-1}} \\right) \\right\\}$ is an approximate descent direction.\n",
     "\n",
     "The initial function $f_0$ is chosen to be a constant function, so:\n",
     "$$f_0 = \\arg\\min_\\gamma \\sum_i L(\\gamma, y_i)$$\n",
@@ -458,7 +449,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:15:47.616165Z",
+     "start_time": "2018-11-19T10:15:47.029937Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
@@ -485,7 +481,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:15:57.808343Z",
+     "start_time": "2018-11-19T10:15:52.525519Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sys import path\n",
@@ -500,7 +501,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:16:15.431856Z",
+     "start_time": "2018-11-19T10:16:01.588084Z"
+    }
+   },
    "outputs": [],
    "source": [
     "spam_ada = AdaBoostClassifier(tree.DecisionTreeClassifier(criterion='entropy',max_depth=3), n_estimators=100)\n",
@@ -511,7 +517,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:16:21.957052Z",
+     "start_time": "2018-11-19T10:16:15.434017Z"
+    }
+   },
    "outputs": [],
    "source": [
     "spam_gtb = GradientBoostingClassifier(n_estimators=100)\n",
@@ -522,7 +533,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:16:21.963469Z",
+     "start_time": "2018-11-19T10:16:21.958527Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Xtrain, ytrain, Xtest, ytest = spam_data.split(2000, feat='wordcount')"
@@ -531,7 +547,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:16:29.302760Z",
+     "start_time": "2018-11-19T10:16:24.805622Z"
+    }
+   },
    "outputs": [],
    "source": [
     "spam_ada = AdaBoostClassifier(tree.DecisionTreeClassifier(criterion='entropy',max_depth=3), n_estimators=100)\n",
@@ -542,7 +563,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:16:32.496859Z",
+     "start_time": "2018-11-19T10:16:29.304800Z"
+    }
+   },
    "outputs": [],
    "source": [
     "spam_gtb = GradientBoostingClassifier(n_estimators=100)\n",
@@ -560,7 +586,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:16:39.056493Z",
+     "start_time": "2018-11-19T10:16:38.953877Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -584,7 +615,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:16:39.289517Z",
+     "start_time": "2018-11-19T10:16:39.284368Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.utils import shuffle\n",
@@ -599,7 +635,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:16:40.525110Z",
+     "start_time": "2018-11-19T10:16:39.717495Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(Xtrain.shape)\n",
@@ -615,7 +656,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-19T10:16:46.190569Z",
+     "start_time": "2018-11-19T10:16:43.828344Z"
+    }
+   },
    "outputs": [],
    "source": [
     "digits_gtb = GradientBoostingClassifier(n_estimators=100)\n",
@@ -652,6 +698,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "232px",
+    "left": "10px",
+    "top": "150px",
+    "width": "299px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
