--- a/subject.ipynb
+++ b/subject.ipynb
@@ -48,6 +48,8 @@
     "\n",
     "**train1ref_s.npy** is a reduced version of **train1ref.npy**, with fewer samples per class for a faster training.\n",
     "\n",
+    "Link to the data : https://drive.google.com/drive/folders/1aEJD9QIM2hgN_0cqCQF-C3Ia7gH4cKSo?usp=sharing\n",
+    "\n",
     "Q1. Import the training image in a numpy array using *np.load*. Look at the dimension of the image."
    ]
   },
@@ -127,8 +129,8 @@
    "source": [
     "from matplotlib import colors\n",
     "def displayMap(m):\n",
-    "    cmap = colors.ListedColormap(['white','#f05824','#f8f381','#1b9c4a','#afd037','#53a97f','#a13a94','#b7529e','#dba0c8','#f0cee2','#3a54a3','#a9a937','#6eccdc','#511616'])\n",
-    "    bounds=[0,11,12,31,34,36,41,42,43,44,51,211,221,222,223]\n",
+    "    cmap = colors.ListedColormap(['white','#f05824','#f8f381','#1b9c4a','#afd037','#53a97f','#a13a94','#b7529e','#dba0c8','#f0cee2','#3a54a3'])\n",
+    "    bounds=[0,11,12,31,34,36,41,42,43,44,51,52]\n",
     "    norm = colors.BoundaryNorm(bounds, cmap.N)\n",
     "    plt.imshow(m,cmap=cmap,norm=norm)\n",
     "    plt.colorbar(cmap=cmap, norm=norm, boundaries=bounds, ticks=bounds)\n",
@@ -155,7 +157,6 @@
     "- 43 : Industrial and commercial units\n",
     "- 44 : Roads\n",
     "- 51 : Water\n",
-    "- 211 : Intensive grasslands\n",
     "\n",
     "The final objective will be to label all of the pixels that are labeled \"0\", meaning the pixels where we do not yet know the class. For this, we're going to learn a classification model. The goal of this model is to associate a label to an unlabeld sample, or in this case, an unlabeled pixel. To train the model, we will have to start by adapting the data set to a format thats readable by scikit-learn, i.e. a list of samples (data) and a list of labels (target).\n",
     "\n",
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -173,7 +174,7 @@
    "outputs": [],
    "source": [
     "def plotPriors(targetList):\n",
-    "    bins=[11,12,31,34,36,41,42,43,44,51,211,221,222,223]\n",
+    "    bins=[11,12,31,34,36,41,42,43,44,51,52]\n",
     "    priors=np.histogram(targetList, bins)[0]\n",
     "    plt.bar(np.arange(1,len(priors)+1), priors)\n",
     "    ax=plt.gca()\n",
