update ensemble methods

--- a/10 - Bagging/Bagging.ipynb
+++ b/10 - Bagging/Bagging.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "Let $\\hat{P}_X$ be the *empirical distribution* of the $X$ variable (from the data $\\mathbf{x}$), and $\\hat{F}_X$ its *empirical cumulative distribution function*.\n",
     "\n",
-    "As $n\\rightarrow \\infty$, $\\hat{F}_X$ converges to the true cumulative distribution $F_X$ of $X$.\n",
+    "As $n\\rightarrow \\infty$, $\\hat{F}_X$ converges to the true cumulative distribution function $F_X$ of $X$.\n",
     "\n",
     "We draw from $\\hat{F}_X$ to simulate the true $F_X$.\n",
     "\n",
@@ -106,7 +106,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T06:46:30.653669Z",
+     "start_time": "2018-11-27T06:46:28.420319Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -125,6 +130,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T06:46:34.882372Z",
+     "start_time": "2018-11-27T06:46:33.060644Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -145,7 +154,7 @@
    "source": [
     "<div class=\"alert alert-warning\">**Exercice:**<br>\n",
     "Implement a Bootstrap algorithm to estimate the distribution of the empirical average and empirical median estimators on this data.<br>\n",
-    "Plot the histogram of these distributions.<br>\n",
+    "Plot the histogram of these distributions (use [`plt.hist`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.hist.html)).<br>\n",
     "Estimate the estimator's empirical average from the bootstrap samples and the mean of its distribution.\n",
     "</div>"
    ]
@@ -153,7 +162,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T06:47:17.547354Z",
+     "start_time": "2018-11-27T06:47:11.504191Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code1.py\n",
@@ -263,6 +277,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T06:51:00.990165Z",
+     "start_time": "2018-11-27T06:50:57.875473Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -307,22 +325,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T06:51:55.055854Z",
+     "start_time": "2018-11-27T06:51:54.987818Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
     "from sklearn.utils import resample\n",
-    "\n",
-    "### Generate data\n",
-    "X,y = gen_data(1)\n",
-    "Xtest,X = np.split(X,[400])\n",
-    "ytest,y = np.split(y,[400])\n",
-    "\n",
-    "Xblue = X[y==-1]\n",
-    "Xred = X[y==1]\n",
-    "plt.figure(figsize=(8,8))\n",
-    "plt.scatter(Xblue[:,0],Xblue[:,1],c='b')\n",
-    "_=plt.scatter(Xred[:,0],Xred[:,1],c='r')\n",
     "\n",
     "### Utility functions\n",
     "def forest_predict(f,X):\n",
@@ -353,8 +365,7 @@
     "    plt.scatter(Xblue_bad[:,0],Xblue_bad[:,1],c='c',marker='v')\n",
     "    plt.scatter(Xred_good[:,0],Xred_good[:,1],c='r')\n",
     "    plt.scatter(Xred_bad[:,0],Xred_bad[:,1],c='m',marker='v')\n",
-    "    plt.show()\n",
-    "    \n"
+    "    plt.show()\n"
    ]
   },
   {
@@ -367,7 +378,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T06:52:15.410336Z",
+     "start_time": "2018-11-27T06:52:15.267656Z"
+    }
+   },
    "outputs": [],
    "source": [
     "### Generate data\n",
@@ -396,7 +412,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T06:52:27.875455Z",
+     "start_time": "2018-11-27T06:52:27.863883Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import tree\n",
@@ -414,7 +435,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T06:52:35.770585Z",
+     "start_time": "2018-11-27T06:52:34.888743Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code2.py\n",
@@ -425,7 +451,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-11-27T06:52:41.566781Z",
+     "start_time": "2018-11-27T06:52:38.829498Z"
+    }
+   },
    "outputs": [],
    "source": [
     "### Display\n",
@@ -468,6 +499,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "384px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
