--- a/9 - Boosting/Boosting.ipynb
+++ b/9 - Boosting/Boosting.ipynb
@@ -153,8 +153,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T09:49:44.131463Z",
-     "start_time": "2018-11-19T09:49:43.897339Z"
+     "end_time": "2018-11-20T14:27:44.017138Z",
+     "start_time": "2018-11-20T14:27:43.454493Z"
     }
    },
    "outputs": [],
@@ -199,8 +199,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T09:49:48.224643Z",
-     "start_time": "2018-11-19T09:49:48.105162Z"
+     "end_time": "2018-11-20T14:28:24.328935Z",
+     "start_time": "2018-11-20T14:28:24.160715Z"
     }
    },
    "outputs": [],
@@ -238,8 +238,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T09:50:25.897876Z",
-     "start_time": "2018-11-19T09:50:25.647950Z"
+     "end_time": "2018-11-20T14:28:41.006307Z",
+     "start_time": "2018-11-20T14:28:40.731738Z"
     }
    },
    "outputs": [],
@@ -281,8 +281,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T09:51:04.181278Z",
-     "start_time": "2018-11-19T09:51:03.875418Z"
+     "end_time": "2018-11-20T14:29:59.123548Z",
+     "start_time": "2018-11-20T14:29:58.847068Z"
     }
    },
    "outputs": [],
@@ -337,8 +337,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T09:54:49.169193Z",
-     "start_time": "2018-11-19T09:54:45.703717Z"
+     "end_time": "2018-11-20T14:46:07.620794Z",
+     "start_time": "2018-11-20T14:46:04.607304Z"
     }
    },
    "outputs": [],
@@ -371,8 +371,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T09:55:02.458380Z",
-     "start_time": "2018-11-19T09:54:56.347273Z"
+     "end_time": "2018-11-20T14:52:16.465651Z",
+     "start_time": "2018-11-20T14:52:11.537881Z"
     }
    },
    "outputs": [],
@@ -451,8 +451,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T10:15:47.616165Z",
-     "start_time": "2018-11-19T10:15:47.029937Z"
+     "end_time": "2018-11-20T15:08:40.043979Z",
+     "start_time": "2018-11-20T15:08:39.550828Z"
     }
    },
    "outputs": [],
@@ -483,8 +483,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T10:15:57.808343Z",
-     "start_time": "2018-11-19T10:15:52.525519Z"
+     "end_time": "2018-11-20T15:13:45.597906Z",
+     "start_time": "2018-11-20T15:13:40.637619Z"
     }
    },
    "outputs": [],
@@ -503,8 +503,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T10:16:15.431856Z",
-     "start_time": "2018-11-19T10:16:01.588084Z"
+     "end_time": "2018-11-20T15:14:15.028909Z",
+     "start_time": "2018-11-20T15:14:02.121211Z"
     }
    },
    "outputs": [],
@@ -519,8 +519,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T10:16:21.957052Z",
-     "start_time": "2018-11-19T10:16:15.434017Z"
+     "end_time": "2018-11-20T15:14:29.968222Z",
+     "start_time": "2018-11-20T15:14:23.917493Z"
     }
    },
    "outputs": [],
@@ -535,8 +535,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-11-19T10:16:21.963469Z",
-     "start_time": "2018-11-19T10:16:21.958527Z"
+     "end_time": "2018-11-20T15:14:38.926862Z",
+     "start_time": "2018-11-20T15:14:38.920932Z"
     }
    },
    "outputs": [],
@@ -703,7 +703,7 @@
    "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
-   "sideBar": false,
+   "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
@@ -712,7 +712,7 @@
     "height": "232px",
     "left": "10px",
     "top": "150px",
-    "width": "299px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
